[package]
name = "timelog"
version = "0.4.2"
authors = ["John Andrews <theunderdog09@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
dirs = "2.0"
log = "0.4.3"
stderrlog = "0.4.3"
